<resources>
    <string name="app_name">E-waste management</string>
    <string name="item_name_ex">CPU FAN</string>
    <string name="upload_new_item">UPLOAD NEW ITEM</string>
    <!-- HINTS -->
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Register</string>
    <string name="email_hint">Email</string>
    <string name="welcome_message">Let\'s change the world!</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Item name</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="password_hint2">Confirm Password</string>
    <string name="individual">Individual</string>
    <string name="company">Company</string>
    <string name="register">Register</string>
    <string name="dob_hint">DD-MM-YYYY</string>
    <string name="user_name_hint">Username</string>
    <string name="location_hint">City</string>
    <string name="country_hint">Country</string>
    <string name="company_name">Company Name</string>
    <string name="company_username_hint">Username EX: Company-Location</string>
    <string name="store_id">Store ID</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_existing_image">Add existing image</string>
    <string name="take_new_photo">Take new photo</string>
    <string name="title">Title</string>
    <string name="model">model</string>
    <string name="phone_laptop">Phone/Laptop</string>
    <string name="computer_part">Computer part</string>
    <string name="other">Other</string>
    <string name="description">description</string>
    <string name="item_image_1">ITEM IMAGE(1)</string>
    <string name="name">Name</string>
    <string name="model_item">Model</string>
    <string name="item_model">Item model</string>
    <string name="item_type">Item type</string>
    <string name="type">Type</string>
    <string name="description_item">Description</string>
    <string name="address">Address</string>
    <string name="hasRecycling">Do you offer recycling of older devices?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="whatDevices">What devices are you looking for?</string>
    <string name="mobile">Mobile Phones, Laptop Computers</string>
    <string name="desktop">Desktops, Computer Components</string>
    <string name="website">Website URL</string>
    <string name="previously_uploaded_items">Previously uploaded items</string>
    <string name="user_name">User name</string>
    <string name="info">Info</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="data_of_birth">Data of birth</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="channel_name">Bid notification</string>
    <string name="hours">Hours:</string>
    <string name="hours_of_op">M-F: 08-18 Sat: 09-16 Sun: 11-16</string>
    <string name="address2">Address:</string>
    <string name="phone">Phone Number:</string>
    <string name="email">Email:</string>
    <string name="rating">Rating:</string>
    <string name="company_image">Company Image</string>
    <string name="home">Home</string>
    <string name="companies">Companies</string>
    <string name="sign_out">Sign Out</string>
    <string name="companyUserBoomer">"This view is available for only individual users"</string>

    <string-array name="type_array">
        <item>All</item>
        <item>Phone/Laptop</item>
        <item>Computer part</item>
        <item>Others</item>
    </string-array>

</resources>