<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/company_card_view"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:layout_margin="20dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:padding="2dp"
    cardview:cardCornerRadius="14dp"
    cardview:cardElevation="8dp"
    cardview:cardMaxElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/company_img"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:background="@color/black"
                android:contentDescription="@string/company_image"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:text="@string/rating"
                    android:textSize="12sp">

                </com.google.android.material.textview.MaterialTextView>

                <RatingBar
                    style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/rating_card"
                    android:layout_margin="8dp"
                    android:numStars="5"
                    android:stepSize=".2" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/company_name"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:padding="8dp"
                android:text="@string/location_hint"
                android:textColor="@color/black"
                android:textSize="16sp">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/recycling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:padding="8dp"
                android:text="@string/hasRecycling"
                android:textColor="@color/black"
                android:textSize="16sp">

            </com.google.android.material.textview.MaterialTextView>

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>